# zendesk-ops-mcp

./: .env.example  LICENSE  README.md  pyproject.toml
src/zendesk_ops_mcp/: models.py  server.py  zendesk_client.py
src/zendesk_ops_mcp/tools/: agents.py  performance.py  system.py  tickets.py
tests/: conftest.py  test_agents.py  test_integration.py  test_models.py  test_performance.py  test_system.py  test_tickets.py  test_zendesk_client.py
