[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zendesk-ops-mcp"
version = "0.1.0"
description = "MCP server for Zendesk operational workflows — ticket triage, SLA monitoring, agent workload, and system health audits"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "mcp>=1.28",
    "httpx>=0.28",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[project.scripts]
zendesk-ops-mcp = "zendesk_ops_mcp.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
